package com.cpz.processing.controls.buttoncontrol.style;

public record ButtonRenderStyle(int fillColor,
                                int strokeColor,
                                float strokeWeight,
                                int textColor,
                                float cornerRadius,
                                boolean showText,
                                String text) {
}
