@startuml
title Button Public Facade Structure
skinparam packageStyle rectangle
skinparam shadowing false

interface Control
class Button
class ButtonModel
class ButtonViewModel
class ButtonView
class ButtonInputAdapter
class ButtonViewState
class DefaultButtonStyle
class ButtonRenderStyle
class DefaultButtonRenderer
class PngButtonRenderer
interface ThemeProvider
class ThemeSnapshot

Button ..|> Control
Button --> ButtonModel : owns
Button --> ButtonViewModel : owns
Button --> ButtonView : owns
Button --> ButtonInputAdapter : delegates input
ButtonInputAdapter --> ButtonView : geometry / hit testing
ButtonInputAdapter --> ButtonViewModel : interaction updates
ButtonViewModel --> ButtonModel : updates
ButtonView --> ButtonViewModel : reads
ButtonView --> ButtonViewState : builds
ButtonView --> DefaultButtonStyle : renders with
DefaultButtonStyle --> ThemeProvider : reads snapshot
ThemeProvider --> ThemeSnapshot
DefaultButtonStyle --> ButtonViewState : resolves
DefaultButtonStyle --> ButtonRenderStyle : creates
DefaultButtonRenderer --> ButtonRenderStyle : draws
PngButtonRenderer --> ButtonRenderStyle : draws tinted alpha mask
@enduml
